added little animation

--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
         </li>
       </ul>
     </nav>
+    <header class="title">
+      <h1 class="head"><b>e.library</b></h1>
+    </header>
   </body>
 </html>
